# financer_django

./: .gitignore  Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
core/: models.py  seed.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_transaction.py  0003_alter_transaction_debt.py
core/templates/core/: account_form.html  account_list.html  cuentas.html  deudas.html  index.html  transacciones.html  transaction_form.html  transaction_list.html
core/templates/partials/: messages.html  navbar.html
docker/: entrypoint.sh
financer/: asgi.py  settings.py  urls.py  wsgi.py
static/CACHE/css/: output.0953dd774c04.css  output.133f03510c35.css  output.2566da2dc4eb.css  output.2b22718bc572.css  output.9594d518d395.css  output.a3f5030a9618.css  output.b28b92556d9b.css  output.c39c6340ad47.css  output.f6f3a40c2668.css  output.fc4a0b3b6be4.css
static/src/: output.css
templates/: _base.html
